--- a/styles.css
+++ b/styles.css
@@ -600,7 +600,7 @@ body {
 
 .youtube-creator-pic {
     position: absolute;
-    top: 30px;
+    bottom: 10px; /* Position at the bottom */
     left: 10px;
     width: 80px;
     height: 80px;
@@ -705,10 +705,11 @@ body {
 /* Youtube Specific Cover Photo */
 .youtube-cover-photo {
     width: 100%;
-    height: 200px;
-    object-fit: contain; /* Changed to contain */
+    height: auto;
+    object-fit: cover;
     border-radius: 8px;
     margin-bottom: 0;
+    position: relative;
 }
 
 .youtube-creator-card {
@@ -716,16 +717,17 @@ body {
     flex-direction: column;
     position: relative;
     overflow: hidden;
-    padding-top: 10px;
+    padding-top: 0;
 }
 
 .youtube-creator-info {
-    padding-left: 10px;
+    padding-left: 100px;
     text-align: left;
+    margin-top: 10px;
 }
 
 .youtube-creator-header {
-    margin-top: 120px;
+    margin-top: 0;
     padding-left: 0;
     align-items: flex-start;
 }
@@ -741,7 +743,7 @@ body {
 }
 
 .youtube-visit-profile {
-    margin-left: 0;
+    margin-left: 100px;
     margin-top: 10px;
 }
 
