--- a/merchandise.css
+++ b/merchandise.css
@@ -70,6 +70,12 @@ body {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+/* Light Mode */
+body.light-mode {
+    background-color: var(--light-bg);
+    color: var(--light-text);
+}
+
 /* Dark Mode */
 @media (prefers-color-scheme: dark) {
     body {
@@ -258,7 +264,7 @@ section {
 
 .product-item .price {
     font-size: 1.6rem;
-    color: var (--accent-color);
+    color: var(--accent-color);
     margin: 15px 0;
 }
 
